--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Choose a profile photo from your library</string>
+	<key>NSDocumentsFolderUsageDescription</key>
+	<string>To attach files to your submissions</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Take a profile photo</string>
 	<key>CFBundleDevelopmentRegion</key>
